--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.application.name=api-gateway
+server.port=8060
 
-logging.level.root=INFO
-logging.level.org.springframework.cloud.gateway.route.RedisRouteDefinitionRepository=INFO
-logging.level.org.springframework.cloud.gateway=TRACE
+spring.cloud.config.enabled=false
+
 
 ### DEFINING THE ROUTES
 
@@ -17,16 +17,7 @@ spring.cloud.gateway.routes[1].id=order-service
 spring.cloud.gateway.routes[1].uri=lb://order-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order/**
 
-## Discovery Server Route
-spring.cloud.gateway.routes[2].id=discovery-server
-spring.cloud.gateway.routes[2].uri=http://localhost:8761
-spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.routes[2].filters[0]=SetPath=/
-
-## Discovery Server Static Route
-spring.cloud.gateway.routes[3].id=discovery-server-static
-spring.cloud.gateway.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
-
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservices-realm
-
+## Inventory Service Route
+spring.cloud.gateway.routes[4].id=inventory-service
+spring.cloud.gateway.routes[4].uri=lb://inventory-service
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/inventory/**
